plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.sonarqube' version '7.2.1.6560'
}

group = 'com.wellkorea'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // OAuth2 Resource Server (for future Keycloak migration)
    // Currently inactive, will be enabled when migrating to Keycloak
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Database & Migrations
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Security & JWT (MVP implementation - will be replaced by Keycloak tokens)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Rate Limiting (Bucket4j with Caffeine cache)
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // MinIO (S3-compatible storage for documents)
    implementation 'io.minio:minio:8.5.7'

    // PDF Generation (quotations, invoices, transaction statements)
    // OpenHTMLtoPDF for HTML-to-PDF with proper Korean font support
    implementation 'com.openhtmltopdf:openhtmltopdf-core:1.0.10'
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'

    // Thymeleaf for HTML email and PDF templates
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Excel Generation (catalog import/export)
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

    // API Documentation (OpenAPI/Swagger)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // Utilities
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:minio:1.19.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport

    // Test output configuration
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
    }
}

// Convenience task: Run unit tests only (fast)
tasks.register('unitTest', Test) {
    description = 'Runs unit tests only (no Spring context, no containers)'
    group = 'verification'

    useJUnitPlatform {
        includeTags 'unit'
    }

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// Convenience task: Run integration tests only (with Testcontainers)
tasks.register('integrationTest', Test) {
    description = 'Runs integration tests only (with Spring context and Testcontainers)'
    group = 'verification'

    useJUnitPlatform {
        includeTags 'integration'
    }

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }

    // Integration tests may need more memory
    maxHeapSize = '1g'
}

// JaCoCo Configuration
jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    dependsOn test
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/BackendApplication.class'
            ])
        }))
    }
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

jacocoTestCoverageVerification {
    dependsOn compileJava, processResources
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/BackendApplication.class'
            ])
        }))
    }
    violationRules {
        rule {
            limit {
                minimum = 0.70
            }
        }
    }
}

check {
    dependsOn jacocoTestCoverageVerification
}

// SonarQube Configuration
sonar {
    properties {
        property 'sonar.projectKey', 'wellkorea-erp-backend'
        property 'sonar.organization', 'donghwunline'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory.get().asFile}/reports/jacoco/test/jacocoTestReport.xml"
    }
}
